# IPS_Recognizer

./: .gitignore  README.md  get_submission.py  main.py  model_speechRecognation.py  model_teach.py  model_teach_upgraded.py  model_upgraded_testing.py  pyproject.toml  requirements.txt  submission.json  submission_metrics.json  test.py  test1file.py  testing_model.py
src/: metrics.py  ml_model.py  model_teach.py  testing_model.py
src/data/: hr_bot_clear.json  hr_bot_merged.json
